<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.murky.tenant</groupId>
        <artifactId>murky-tenant-library</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>murky-tenant-core</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon</artifactId>
            <optional>true</optional>
        </dependency>

        <!--接口文档依赖-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.docs.openapi2</artifactId>
        </dependency>
        <!-- start 实体转换依赖-->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <!--end 实体转换依赖-->

        <!--参数校验-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.validation</artifactId>
        </dependency>

        <!-- core -->
        <dependency>
            <groupId>cn.murky</groupId>
            <artifactId>murky-core</artifactId>
        </dependency>

        <!-- security -->
        <dependency>
            <groupId>cn.murky</groupId>
            <artifactId>murky-security</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>com.mybatis-flex</groupId>
                            <artifactId>mybatis-flex-processor</artifactId>
                            <version>${mybatis-flex.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>